# AoC_2024

./: .gitignore  CMakeLists.txt  main.c
Day_1/: Day_1.c  Day_1.h  subject.txt
Day_2/: Day_2.c  Day_2.h
Day_3/: Day_3.c  Day_3.h
Day_4/: Day_4.c  Day_4.h
Day_5/: Day_5.c  Day_5.h
common/: common.c  common.h
